[project]
name = "QGEL"
version = "0.1.0"
authors = ["Murilo de Carvalho Andrade", "Pedro Henrique Gasparetto Lugão"]
description = "A library for working with graphs using quantum algorithms"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "pylatexenc>=2.10",
    "qiskit>=2.1.2",
    "qiskit-aer>=0.17.2",
]
